Expand/collapse toggle is no longer 100% wide.
FossilOrigin-Name: bb333b0bd924afa788ec11d6ca2c684efc3b41726f354aa3673b5a10d09e473c

--- a/src/default.css
+++ b/src/default.css
@@ -793,7 +793,8 @@ input[type=checkbox].forum-post-collapser:not(:checked) ~ label.forum-post-colla
   content: "Expand";
 }
 label.forum-post-collapser {
-  display: block;
+  align-self: flex-start;
+  padding: 0.1em 0.5em;
   border: 1px outset;
   border-radius: 0.25em;
 }
